# kitti-dataset-for-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
kitti-dataset/: Cargo.toml
kitti-dataset-nalgebra/: Cargo.toml  README.md
kitti-dataset-nalgebra/src/: common.rs  lib.rs
kitti-dataset/examples/: dataset.rs
kitti-dataset/src/: calib_codegen.rs  common.rs  dataset.rs  error.rs  lib.rs  object.rs  odometry.rs  serde.rs  tracking.rs
kitti-dataset/src/common/: point_cloud.rs
kitti-dataset/src/dataset/: object.rs  tracking.rs
kitti-dataset/src/object/: label.rs
kitti-dataset/src/object/label/: iter.rs  types.rs
kitti-dataset/src/odometry/: pose.rs
kitti-dataset/src/tracking/: label.rs  oxts.rs
kitti-dataset/src/tracking/oxts/: iter.rs  types.rs  vec.rs  write.rs
kitti-dataset/tests/: calib.rs  object_label.rs  pose.rs
src/: annotation.rs  calib_codegen.rs  calibration.rs  common.rs  error.rs  iter.rs  lib.rs  object.rs  odometry.rs  oxts.rs  point_cloud.rs  tracking.rs  types.rs  vec.rs  write.rs
src/annotation/: iter.rs  types.rs  vec.rs  write.rs
src/calibration/: read.rs  types.rs
src/common/: point_cloud.rs
src/object/label/: iter.rs  types.rs  vec.rs  write.rs
src/oxts/: iter.rs  vec.rs  write.rs
src/tracking/: label.rs
src/tracking/oxts/: types.rs  utils.rs
tests/: annotation.rs  calib.rs  object_label.rs  object_label.txt  oxts.rs  tracking_label.rs
