[package]
name = "kitti-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
csv = "1.1.6"
itertools = "0.11.0"
measurements = { version = "0.11.0", features = ["serde"] }
nalgebra = { version = "0.32.1", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_repr = "0.1.10"
slice-of-array = "0.3.2"
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.69"
