[package]
name = "kitti-dataset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.2.2"
itertools = "0.11.0"
measurements = { version = "0.11.0", features = ["serde"] }
nalgebra = { version = "0.32.3", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_repr = "0.1.16"
slice-of-array = "0.3.2"
thiserror = "1.0.48"

[dev-dependencies]
anyhow = "1.0.75"
