[package]
name = "kitti-dataset-nalgebra"
description = 'nalgebra extension for kitti-dataset crate'
version = "0.1.0"
authors = ['jerry73204 <jerry73204@gmail.com>']
edition = "2021"
documentation = 'https://docs.rs/kitti-dataset-nalgebra/'
repository = 'https://github.com/jerry73204/kitti-dataset-for-rust.git'
homepage = 'https://github.com/jerry73204/kitti-dataset-for-rust'
readme = 'README.md'
license = 'MIT'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kitti-dataset = { version = "0.2.0", path = "../kitti-dataset" }
nalgebra = "0.32.5"
slice-of-array = "0.3.2"
